--- a/less/controls.less
+++ b/less/controls.less
@@ -8,6 +8,14 @@
   }
 }
 
+.controls--crop {
+  position: absolute;
+
+  @media (min-width: @tablet-width) {
+    position: static;
+  }
+}
+
 .controls--fill,
 .controls--contrast {
   display: none;
