--- a/less/svg.less
+++ b/less/svg.less
@@ -118,7 +118,13 @@
 
   @media (min-width: @tablet-width) {
     left: 0;
-    top: -2px;
-    width: 76px;
+    top: -11px;
+    width: 54px;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: 0;
+    top: -4px;
+    width: 70px;
   }
 }
