--- a/less/features-items.less
+++ b/less/features-items.less
@@ -334,7 +334,7 @@
     background-repeat: no-repeat;
     width: 300px;
     height: 484px;
-    top: 4px;
+    top: 0;
     left: 0;
   }
 
@@ -357,7 +357,7 @@
     background-repeat: no-repeat;
     width: 300px;
     height: 484px;
-    top: 4px;
+    top: 0;
     left: 0;
   }
 
@@ -376,7 +376,7 @@
     background-repeat: no-repeat;
     width: 300px;
     height: 484px;
-    top: 4px;
+    top: 0;
     left: 0;
   }
 
