--- a/less/header.less
+++ b/less/header.less
@@ -65,6 +65,7 @@
     fill: rgba(108, 118, 130, 0.6);
   }
 }
+
 .page-header__logo-pink--purple_part {
   fill: #D22856;
 }
@@ -110,6 +111,31 @@
   left: 21px;
   top: 20px;
 
+  &:hover .page-header__logo-pink  {
+    fill: #d22856;
+  }
+
+  &:hover .page-header__icon-closed{
+    fill: #d22856;
+  }
+  &:hover .page-header__icon-burger {
+    fill: #d22856;
+  }
+
+  &:active .page-header__icon-burger {
+    fill: #d22856;
+    opacity: 0.5;
+  }
+
+  &:active .page-header__logo-pink {
+    fill: #6b7681;
+  }
+
+  &:active .page-header__icon-closed {
+    fill: #d22856;
+    opacity: 0.5;
+  }
+
   @media (min-width: @desktop-width) {
     left: 129px;
     top: 28px;
@@ -149,3 +175,36 @@
 //  }
 //}
 
+.page-header__icon-burger {
+  width: 68px;
+  height: 22px;
+  fill: @white;
+
+  @media (min-width: @tablet-width) {
+    width: 77px;
+    height: 24px;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: none;
+  }
+}
+
+.page-header__logo-link--burger {
+  right: 0;
+  left: auto;
+
+  @media (min-width: @tablet-width) {
+    top: 35px;
+  }
+}
+
+.page-header__icon-closed {
+  width: 81px;
+  height: 27px;
+  fill: @white;
+
+  @media (min-width: @desktop-width) {
+    display: none;
+  }
+}
