--- a/less/os-nav.less
+++ b/less/os-nav.less
@@ -5,11 +5,15 @@
   flex-wrap: wrap;
   margin: 0 auto;
   padding-top: 108px;
+  list-style-type: none;
+  padding-left: 20px;
+  padding-right: 20px;
 
   @media (min-width: @tablet-width) {
+    justify-content: space-evenly;
     width: 49%;
     margin-left: 0;
-    padding-top: 0;
+    padding: 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -24,13 +28,21 @@
   flex-grow: 1;
 }
 
+//.os-list__item {
+//  position: relative;
+//}
+//
+//.os-list__icon {
+//  position: absolute;
+//}
+
 .os-nav__title {
   display: block;
   .font-mixin(24px; @content-font; 14px; normal);
   text-shadow: -3px -1px 15px #000000;
   width: auto;
   margin-left: 0;
-  margin-top: 64px;
+  margin-top: 9px;
   text-align: center;
   padding-bottom: 18px;
 
@@ -38,7 +50,7 @@
     font-size: 18px;
     margin-left: 0;
     width: 54%;
-    margin-top: 60px;
+    margin-top: 25px;
     padding-bottom: 27px;
   }
 
