--- a/less/panorama.less
+++ b/less/panorama.less
@@ -48,12 +48,13 @@
 
 .panorama-info {
   padding-top: 8px;
-  padding-left: 32px;
+  padding-left: 0;
 
   @media (min-width: @tablet-width) {
     margin-left: auto;
     margin-right: 13px;
     padding-top: 10px;
+    padding-left: 32px;
   }
 
   @media (min-width: @desktop-width) {
