--- a/less/slider.less
+++ b/less/slider.less
@@ -33,7 +33,21 @@
   cursor: pointer;
 }
 
-#radio-slider-1:checked ~ .slider__slider-controls label {
+.radio-slider__one:checked ~ .slider__slider-controls .radio-slider-1 {
+  border: 3px solid #000000;
+  width: 6px;
+  height: 6px;
+  background-color: @white;
+}
+
+.radio-slider__two:checked ~ .slider__slider-controls .radio-slider-2 {
+  border: 3px solid #000000;
+  width: 6px;
+  height: 6px;
+  background-color: @white;
+}
+
+.radio-slider__three:checked ~ .slider__slider-controls .radio-slider-3 {
   border: 3px solid #000000;
   width: 6px;
   height: 6px;
