--- a/less/footer.less
+++ b/less/footer.less
@@ -228,12 +228,14 @@ address {
   width: 100%;
   position: relative;
 
-  &::before {
+  &::after {
     content: " ";
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 50%;
     background: url("../img/figure_footer.svg") no-repeat;
+    z-index: 100;
+    top: 0;
   }
   img {
     min-width: 100%;
@@ -246,13 +248,12 @@ address {
   @media (min-width: @tablet-width) {
     background-image: url("../img/bg-map-tablet@1x.jpg");
     height: 375px;
-    z-index:3;
+    z-index: 3;
   }
 
   @media (min-width: @tablet-width) and (min-resolution: @retina-dpi), (min-width: @tablet-width) and (min-resolution: @retina-dppx) {
     background-image: url("../img/bg-map-tablet@2x.jpg");
   }
-
 
   @media (min-width: @desktop-width) {
     background-image: url("../img/bg-map-desktop@1x.jpg");
