--- a/less/filter-range.less
+++ b/less/filter-range.less
@@ -94,6 +94,10 @@
   left: 77%;
 }
 
+.range-controls__separate {
+  display: block;
+}
+
 .range-controls__separate--mobile_hidden {
   display: none;
 
@@ -103,5 +107,6 @@
 
   @media (min-width: @desktop-width) {
     display: block;
+    margin-top: 26px;
   }
 }
